--- a/app/src/main/res/layout/fragment_velocity.xml
+++ b/app/src/main/res/layout/fragment_velocity.xml
@@ -54,7 +54,7 @@
             style="@style/AppTextViewStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
+            android:layout_marginHorizontal="10dp"
             android:background="@drawable/border_gray"
             android:gravity="center_horizontal"
             android:paddingVertical="14dp"
@@ -70,11 +70,12 @@
             style="@style/PrimaryColoredButton"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
+            android:layout_marginVertical="8dp"
             android:text="@string/get"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="@id/textViewVelocity"
             app:layout_constraintStart_toStartOf="@id/textViewVelocity"
-            app:layout_constraintTop_toTopOf="@+id/buttonSetVelocity" />
+            app:layout_constraintTop_toBottomOf="@id/textViewVelocity" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.textview.MaterialTextView
