Deadband step size 10

--- a/app/src/main/res/layout/fragment_deadband.xml
+++ b/app/src/main/res/layout/fragment_deadband.xml
@@ -35,6 +35,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textViewToolTip"
             app:maxNumber="99999"
+            app:stepSize="10"
             app:minNumber="0" />
 
         <com.google.android.material.button.MaterialButton
